# carta-package

./: .gitignore  Jenkinsfile  README.md  carta  main.js  package.json  pubkey.asc  remote.sh  run.sh
.copr/: Makefile
AppImage/: CARTA.desktop  README.md  create-appimage-redhat.sh  pack-centos7.sh
AppImage-old/: CARTA.desktop  Dockerfile-carta-appimage-create-redhat  Dockerfile-carta-appimage-create-ubuntu  README.md  create-appimage-ubuntu.sh  pack-centos7.sh  pack-ubuntu.sh
CARTA-AppImage-creator/: AppRun  Dockerfile-carta-appimage-create  Dockerfile-carta-appimage-create-Almalinux8  Dockerfile-carta-appimage-create-Almalinux8-new  Dockerfile-carta-appimage-create-CentOS7  README.md  appimage_config  appimagetool.sh  build_docker_image.sh  carta.desktop  cp_libs.sh  create-carta-appimage-Almalinux8.sh  create-carta-appimage-CentOS7.sh  create-carta-appimage-mylin.sh  create-carta-appimage.sh  edit_linux_config  edit_linux_config.sh  generate_default_appimage_config.sh  org.carta.desktop.appdata.xml  run_docker_package.sh  run_pack.sh
Flatpak/: README.md  org.flatpak.CARTA.yml
NPM/: README.md  npm_config  npm_publish.sh
RPM/: Dockerfile-rpmbuild  README.md  RPM_publish.sh  build.info  carta-backend-beta.spec  carta-backend.spec  carta-beta.spec  carta-casacore-nocurl.spec  carta-casacore.spec  carta-cfitsio-v430.spec  carta-cfitsio-v450-curl.spec  carta-cfitsio-v450.spec  carta-cfitsio-v463-curl.spec  carta-cfitsio-v463-nocurl.spec  carta-cfitsio-v463.spec  carta-frontend.spec  (+7 more)
Tauri/carta-tauri/: Cargo.toml  tauri.conf.json
Tauri/carta-tauri/src/: main.rs
(+66 files in other folders)
